# file_flow

./: .codecov.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  config.toml  magic.py  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  project_seed.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codecov.yml  gh-pages.yml  release-please.yml  release.yml
benchmarks/: benchmark_sorter.py
data/: default_rules.toml
docs/: architecture.md  changelog.md  index.md  user_guide.md
examples/file_flow_sample_plugin/: pyproject.toml
examples/file_flow_sample_plugin/file_flow_sample_plugin/: sample.py
formula/: file-sorter.rb
my-file-sorter-js/: .gitignore  package-lock.json  package.json
my-file-sorter-js/electron/: main.js  preload.js
my-file-sorter-js/react-ui/: package.json
my-file-sorter-js/react-ui/public/: index.html
my-file-sorter-js/react-ui/src/: App.js
scripts/: build_binary.sh  install_task.ps1  run_benchmarks.sh
sorter/: __init__.py  classifier.py  cli.py  cli_utils.py  clustering.py  config.py  dupes.py  logging_config.py  ml_features.py  mover.py  planner.py  plugin_manager.py  renamer.py  reporter.py  review.py  rollback.py  scanner.py  scheduler.py  settings.py  stats.py  supervised.py  telemetry.py  utils.py
sorter/plugins/: __init__.py  base.py  exif_renamer.py  id3_renamer.py
sorter_gui/: __init__.py  app.py
tests/: conftest.py  test_classifier.py  test_classify_file.py  test_cli.py  test_cli_utils.py  test_clustering.py  test_dupes.py  test_e2e.py  test_gui_import.py  test_gui_window.py  test_integration.py  test_mover.py  test_plugin_manager.py  test_renamer.py  test_reporter.py  test_review.py  test_rollback.py  test_scanner.py  test_scheduler.py  test_stats.py  test_supervised.py  test_telemetry.py
