[tool.poetry]
name = "file-flow"
version = "1.0.0"
description = "A lightweight utility for sorting files."
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "sorter" },
]

[tool.poetry.dependencies]
python = "^3.9"
python-slugify = "*"
python-magic = "*"
pandas = "*"
openpyxl = "*"
rich = "*"
sentry-sdk = "*"
pyqt6 = "*"
croniter = "^6.0.0"
python-dateutil = "^2.9.0.post0"
typer = "^0.16.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
black = "^25.1.0"
mypy = "^1.16.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-benchmark = "^5.1.0"
matplotlib = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["test_*.py", "benchmark_*.py"]

[tool.poetry.scripts]
file-sorter-gui = "sorter_gui.app:main"
