[tool.poetry]
name = "file-flow"
version = "0.1.0"
description = "A lightweight utility for sorting files."
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "sorter" },
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.3.0"
python-slugify = "^8.0.4"
python-magic = "^0.4.27"
openpyxl = "^3.1.5"
rich = "^14.0.0"
sentry-sdk = "^2.29.1"
pyqt6 = "^6.9.1"
croniter = "^6.0.0"
typer = {extras = ["rich"], version = "^0.16.0"}
ExifRead = "^3.3.1"
mutagen = "^1.47.0"
scikit-learn = "^1.6.1"
joblib = "^1.5.1"
pydantic = "^2.7.0"
pydantic-settings = "^2.10.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
black = "^25.1.0"
mypy = "^1.16.0"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-benchmark = "^5.1.0"
matplotlib = "^3.8.0"

[tool.poetry.extras]
dev = [
    "ruff",
    "black",
    "mypy",
    "flake8",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "matplotlib",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["test_*.py", "benchmark_*.py"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
files = ["sorter", "tests"]
ignore_missing_imports = true

[tool.poetry.scripts]
file-sorter-gui = "sorter_gui.app:main"
file-sorter = "sorter.cli:main"

[tool.poetry.plugins."file_flow.renamers"]
exif = "sorter.plugins.exif_renamer:ExifRenamer"
id3 = "sorter.plugins.id3_renamer:Id3Renamer"
